Thu May  7 12:55:41 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java (AddressNode):
	  always omit Addr for #shouldEvaluatedToAddress node.

Thu May  7 11:06:48 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java (BinaryOpNode):
	  evaluate RIGHT before LEFT.

Thu May  7 10:31:12 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: fix compile error.

Thu May  7 10:01:41 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: emit statement
	  info for casted stmt.

Thu May  7 10:00:38 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir/Dumper.java (printMember): simplify Label
	  dump.

Wed May  6 18:41:06 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: assignBeforeStmt
	  is useless.  Use assign instead.

	* net/loveruby/cflat/compiler/IRGenerator.java: should be able to
	  create tmp in variable initializers for also function toplevel
	  block.

	* net/loveruby/cflat/compiler/IRGenerator.java: move funcall
	  before stmt.

	* net/loveruby/cflat/compiler/CodeGenerator.java: do not display
	  "(null)" location.

Wed May  6 17:08:40 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: refactoring:
	  rename variables.

Wed May  6 15:50:22 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Type.java: types should not know signed
	  or not.

	* net/loveruby/cflat/ir/Op.java: have signed/unsigned information.

	* net/loveruby/cflat/compiler/IRGenerator.java: use new op and
	  type.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

	* net/loveruby/cflat/compiler/TypeChecker.java (FuncallNode):
	  should check optional argument types.

	* net/loveruby/cflat/compiler/CodeGenerator.java: now use simple
	  mov to load values from memory (and cast it later).
