@@ -1,3 +1,8 @@
+Thu May  7 13:00:09 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/IRGenerator.java: should not return
+	  Expr for stmt, to suppress wrong warning.
+
 Thu May  7 12:55:41 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/IRGenerator.java (AddressNode):
